<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2.5.3</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>
    <groupId>com.pablintino.services</groupId>
    <artifactId>scheduler-service-root</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <name>scheduler-service-root</name>
    <description>Scheduler service for pablintino arq.</description>
    <packaging>pom</packaging>
    <properties>
        <java.version>11</java.version>
    </properties>

    <modules>
        <module>scheduler-service</module>
        <module>scheduler-service-models</module>
    </modules>

    <dependencies>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.20</version>
            <scope>provided</scope>
        </dependency>
    </dependencies>
</project>
